--- a/src/components/RichEditor/RichEditor.css
+++ b/src/components/RichEditor/RichEditor.css
@@ -1,19 +1,13 @@
 .RichEditor-root {
-  background: #fff;
-  border: 1px solid #ddd;
+  background: #ffffff;
   font-family: 'Georgia', serif;
   font-size: 14px;
-  padding: 15px;
 }
 
 .RichEditor-editor {
   cursor: text;
   font-size: 16px;
   margin-top: 10px;
-}
-
-.RichEditor-topborder {
-  border-top: 1px solid #ddd;
 }
 
 .RichEditor-editor .public-DraftEditorPlaceholder-root,
@@ -42,8 +36,8 @@
 .RichEditor-editor .public-DraftStyleDefault-pre {
   background-color: rgba(0, 0, 0, 0.05);
   font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
-  font-size: 16px;
-  padding: 20px;
+  font-size: 14px;
+  padding: 10px;
 }
 
 .RichEditor-controls {
